# motor_grafico

./: CMakeLists.txt  links  todo.txt
codigo/prueba/: CMakeLists.txt  pruebas.cpp
codigo/src/concepts/: CMakeLists.txt  collition.cpp  image_procesing.cpp  physical.cpp  primitives.cpp  texture.cpp  zstack.cpp
codigo/src/concepts/collition/: collition_point.cpp  correct_collition.cpp  resolve_collition.cpp  test_collition.cpp
codigo/src/concepts/operations/: absv_ref.cpp  absv_val.cpp  fisqrt_val.cpp  max0_val.cpp  sgn_val.cpp
codigo/src/concepts/primitives/: definitions.cpp
codigo/src/pr_objects/: CMakeLists.txt  circle.cpp  fig3D.cpp  nedge.cpp  square.cpp
codigo/src/primitives/: CMakeLists.txt
codigo/src/primitives/operations/: absv_ref.cpp  absv_val.cpp  bound.cpp  bound0.cpp  bytou16.cpp  bytou32.cpp  bytou64.cpp  fisqrt.cpp  gei.cpp  gti.cpp  max.cpp  max_min.cpp  min.cpp  sgn.cpp
src/concepts/: CMakeLists.txt  Makefile  cmake_install.cmake
src/concepts/collision/collision_point/: cir_cir.cpp  cir_sq.cpp  generic.cpp  line_cir.cpp  line_sq.cpp  sq_sq.cpp  with_line.cpp
src/concepts/collision/correct_collision/: cir_cir.cpp  cir_line.cpp  cir_par.cpp  cir_sq.cpp  generic.cpp  par_line.cpp  par_sq.cpp  sq_cir.cpp  sq_line.cpp  sq_sq.cpp  with_line.cpp
src/concepts/collision/resolve_collision/: cir_cir.cpp  cir_line.cpp  cir_par.cpp  cir_sq.cpp  generic.cpp  par_line.cpp  par_sq.cpp  sq_cir.cpp  sq_line.cpp  sq_sq.cpp  with_line.cpp
src/concepts/collision/test_collision/: cir_cir.cpp  cir_sq.cpp  generic.cpp  line_cir.cpp  line_par.cpp  line_sq.cpp  par_cir.cpp  par_sq.cpp  sq_sq.cpp
src/concepts/collition/collition_point/: cir_cir.cpp  cir_line.cpp  cir_sq.cpp  generic.cpp  line_cir.cpp  line_sq.cpp  sq_cir.cpp  sq_line.cpp  sq_sq.cpp  with_line.cpp
src/concepts/collition/correct_collition/: cir_cir.cpp  cir_line.cpp  cir_par.cpp  cir_sq.cpp  generic.cpp  line_par.cpp  par_sq.cpp  sq_line.cpp  sq_par.cpp  sq_sq.cpp  with_line.cpp
src/concepts/collition/resolve_collition/: cir_cir.cpp  cir_line.cpp  cir_sq.cpp  generic.cpp  line_par.cpp  par_line.cpp  par_sq.cpp  sq_cir.cpp  sq_line.cpp  sq_par.cpp  sq_sq.cpp  with_line.cpp
src/concepts/collition/test_collition/: cir_cir.cpp  cir_line.cpp  cir_sq.cpp  generic.cpp  line_cir.cpp  line_par.cpp  line_sq.cpp  par_cir.cpp  par_sq.cpp  sq_cir.cpp  sq_line.cpp  sq_par.cpp  sq_sq.cpp
src/concepts/glyph_system/: cache.cpp  clear_cache.cpp  clear_glyph.cpp  clear_meta.cpp  constructor.cpp  destructor.cpp  fill.cpp  get.cpp  get_key.cpp  get_windows.cpp  image.cpp  is_cached.cpp  print_char.cpp  print_str.cpp  rasterize.cpp
src/concepts/gui/button/: contructor.cpp  dimentions.cpp  position.cpp  print_fn.cpp
src/concepts/gui/checkbox/: active.cpp  constructor.cpp  dimentions.cpp  position.cpp  print_fn.cpp
src/concepts/gui/guicomponent/: add.cpp  constructor.cpp  getters.cpp  print.cpp  test.cpp
src/concepts/gui/label/: constructor.cpp  destructor.cpp  dimentions.cpp  position.cpp  print_fn.cpp  text.cpp
src/concepts/gui/slider/: base_fn.cpp  constructor.cpp  dimentions.cpp  get_current_value.cpp  position.cpp  print_fn.cpp  sign_fn.cpp
src/concepts/gui/textbox/: active.cpp  constructor.cpp  cursor.cpp  destructor.cpp  dimentions.cpp  position.cpp  print_fn.cpp  text.cpp
src/concepts/image_modifier/basic_operations/: constructor_by_pixels.cpp  copy_assignment.cpp  copy_constructor.cpp  default_constructor.cpp  destructor.cpp  move_assignment.cpp  move_constructor.cpp
src/concepts/image_modifier/figures_constructors/: circle.cpp  circunference.cpp  oval.cpp  polygon.cpp  rounded_square.cpp  triangle.cpp
src/concepts/image_modifier/modifiers/: apply.cpp  difference.cpp  intersection.cpp  overlap.cpp  rbpp.cpp  resize.cpp  rotate180.cpp  rotate270.cpp  rotate90.cpp  shift.cpp  union.cpp  xmirror.cpp  xshear.cpp  ymirror.cpp
src/concepts/image_modifier/special_operations/: access.cpp  bounder.cpp  height.cpp  subimage.cpp  width.cpp
src/concepts/image_modifier/utils/: bound_constructor.cpp
src/concepts/lights/: generate_view_covering.cpp
src/concepts/physical/basic_operations/: constructor_by_parameters.cpp  default_constructor.cpp
src/concepts/physical/getters/: get_force.cpp  get_mass.cpp  get_position.cpp  get_velocity.cpp
src/concepts/physical/movement/: calculate_movement.cpp
src/concepts/physical/setters/: add_force.cpp  add_velocity.cpp  set_force.cpp  set_position.cpp  set_velocity.cpp
src/concepts/visualizer/functions/: print_polygon_c.cpp  print_triangle_c.cpp  print_triangle_t.cpp
src/primitives/: CMakeLists.txt  Makefile  cmake_install.cmake
src/primitives/bool_matrix/: access.cpp  change.cpp  constructor.cpp  destructor.cpp  fill_bounds.cpp  getters.cpp  number_bits.cpp  number_bits_quad.cpp  set.cpp  unset.cpp
src/primitives/bool_matrix/signed/: access.cpp  constructor.cpp  destructor.cpp  fill_bounds.cpp  getters.cpp  number_bits.cpp  number_bits_quad.cpp  set.cpp  unset.cpp
src/primitives/bool_matrix/unsigned/: access.cpp  change.cpp  constructor.cpp  destructor.cpp  fill_bounds.cpp  getters.cpp  number_bits.cpp  number_bits_quad.cpp  set.cpp  unset.cpp
src/primitives/file_processing/charge/: charge_png.cpp
src/primitives/file_processing/zlib_inflate/: access_bit.cpp  huffman_tree.cpp  inflate.cpp
src/primitives/global/basic_operations/: constructor.cpp  destructor.cpp
src/primitives/global/getters/: get_random.cpp  get_render.cpp  get_time.cpp  get_window.cpp
src/primitives/glyph_system/: cache.cpp  clear_cache.cpp  clear_glyph.cpp  clear_meta.cpp  constructor.cpp  get_key.cpp  is_cached.cpp  print_char.cpp  print_str.cpp  rasterize.cpp
src/primitives/math/: rotate_segments.cpp  rotate_triangles.cpp
src/primitives/rasterizer/: raster_grade_1.cpp  raster_grade_2.cpp  raster_lines.cpp
(+770 files in other folders)
