add_executable (fin pruebas.cpp)
target_include_directories (fin PRIVATE ${CMAKE_SOURCE_DIR}/headers)
target_sources (fin PRIVATE $<TARGET_OBJECTS:objsrc> $<TARGET_OBJECTS:objsrc_concepts> $<TARGET_OBJECTS:objsrc_probjects>)
target_link_libraries (fin PRIVATE objsrc objsrc_concepts objsrc_probjects)
target_link_libraries (fin PRIVATE SDL2::SDL2)
